# arxiv-ai-summaries

./: .gitignore  README.md  pyproject.toml
arxiv-search/: README.md  search_arxiv.py
summarize/: gemini_api.py  summarize_geoscience_papers.py  summarize_papers.py
